Sun Oct 27 01:22:04 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* load.c: change s_try_load and s_try_load_path to s_primitive_load
	and s_primitive_load_path.

	* eval.c, load.c, error.c (scm_wta): use scm_misc_error.

	* error.h: don't declare error symbols.  prototype for scm_misc_error.

	* stackchk.c (scm_stack_overflow_key): defined here instead of in
	error.c.

	* error.c: use SCM_SYMBOL to set up error keys.
	scm_misc_error: new procedure.

Fri Oct 25 01:56:30 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* read.c (scm_lreadr): Recognize SCSH-style block comments; text
	between `#!' and `!#' is ignored.
	(skip_scsh_block_comment): New function.

	* feature.c (scm_set_program_arguments): New argument, FIRST.
	* feature.h: Update prototype.
	* init.c (scm_boot_guile_1): Pass new argument to
	scm_set_program_arguments.

Tue Oct 22 20:54:42 1996  Jim Blandy  <jimb@floss.cyclic.com>

	* init.c (scm_start_stack): Don't initialize scm_progargs here.
	(scm_boot_guile): Call scm_set_program_arguments here, later than
	the old initialization.

*	* init.c: (scm_boot_guile, scm_boot_guile_1):  New, simplified
	initialization procedure.
	- Delete in, out, err arguments; there are other perfectly good
 	ways to override these when desired.
	- Delete result argument; this function shouldn't ever return.
	- Rename init_func argument to main_func, for less confusion.
	- Delete boot_cmd argument; main_func is more general.
  	-Add 'closure' argument, to help people pass data to main_func
 	without resorting to global variables.
	- Abort if reentered; don't bother returning an error code.
	- Call scm_init_standard_ports to set up the default/current
 	standard ports; no need to pass them to scm_start_stack.
	- Remove code to evaluate the boot_cmd, and start the repl; let
 	the user do something like that in main_func if they want.
	- Remove code to package up a return value; main_func can do any
 	of that as needed.
	- Call exit (0), instead of returning.